--- a/src/Header.css
+++ b/src/Header.css
@@ -2,6 +2,9 @@
   background-color: #131921;
   display: flex;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .header__logo {
@@ -20,6 +23,27 @@
 .header__option {
   display: flex;
   flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.header__optionBasket {
+  display: flex;
+  align-items: center;
+}
+
+.header_optionLineOne {
+  font-size: 10px;
+}
+
+.header_optionLineTwo {
+  font-size: 13px;
+  font-weight: 800;
+}
+
+.header__basketCount {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .header__link {
